# fast-cat

./: Cargo.toml  LICENSE  Readme.md
benches/: concat_benchmark.rs
src/: lib.rs
