[package]
name = "fast-cat"
description = "An ergonomic macro for efficient string concatenation with a single memory allocation."
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0" 
authors = ["vloldik (@vloldik)"]

keywords = ["string", "concat", "performance", "strcat"]
categories = ["text-processing", "development-tools::procedural-macro-helpers"]

[dependencies]
