[package]
name = "fast-cat"
description = "An ergonomic macro for efficient string concatenation with a single memory allocation."
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0" 
authors = ["vloldik (@vloldik)"]

keywords = ["string", "concat", "performance", "strcat"]
categories = ["text-processing", "development-tools::procedural-macro-helpers"]
repository = "https://github.com/vloldik/fast-cat"
documentation = "https://docs.rs/fast-cat"

[dependencies]
allocation-counter = { version = "0", optional = true }

[dev-dependencies]
criterion = "0.6.0"

[features]
count-allocations = ["allocation-counter"]

[[bench]]
name = "concat_benchmark"
harness = false